--- a/blogpessoal/felipe/src/app/login/login.component.html
+++ b/blogpessoal/felipe/src/app/login/login.component.html
@@ -1,6 +1,24 @@
-<div class="container">
-    <div class="col-md-6">
-        .col-md-
+<body>
+    <div class="container">
+        <div class="row d-flex mx-auto justify-content-center">
+            <div class="div flex-column align-items-center login-margem">
+                <div class="form-group">
+                    <label for="usuario">Usuário</label>
+                    <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário" />
+                </div>
+
+                <div class="form-group">
+                    <label for="senha">Senha</label>
+                    <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha" />
+                </div>
+
+                <div class="d-flex justify-content-center">
+                    <button type="submit" class="btn btn-success">Entrar</button>
+                </div>
+                <p class="text-center">
+                    Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
+                </p>
+            </div>
+        </div>
     </div>
-    <div class="col-md-6"></div>
-</div>
+</body>
