--- a/blogpessoal/felipe/src/app/cadastrar/cadastrar.component.html
+++ b/blogpessoal/felipe/src/app/cadastrar/cadastrar.component.html
@@ -4,11 +4,11 @@
         <div class="col-md-6 alinhamento">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10 mb-5">
-                    <h1 class='text-center'>Cadastro</h1>
+                    <h1 class="text-center" routerLink= "/cadastrar">Cadastro</h1>
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input class="form-control" type="text" name="nome" id="nome"
+                        <input [(ngModel)]= "usuario.nome" class="form-control" type="text" name="nome" id="nome"
                             placeholder="Digite o seu nome completo" >
                     </div>
 
@@ -20,29 +20,29 @@
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input class="form-control" type="text" name="senha" id="senha"
+                        <input (input)="confirmSenha($event)" class="form-control" type="text" name="senha" id="senha"
                             placeholder="Digite o sua senha">
                     </div>
 
                     <div class="form-group">
                         <label for="confirmSenha">Confirmar senha</label>
-                        <input class="form-control" type="text" name="confirmSenha" id="confirmSenha"
+                        <input [(ngModel)]="usuario.senha" class="form-control" type="text" name="confirmSenha" id="confirmSenha"
                             placeholder="Digite o seu nome completo">
                     </div>
 
                     <div class="form-group">
                         <label for="foto">URL da foto</label>
-                        <input class="form-control" type="text" name="foto" id="foto"
+                        <input [(ngModel)]="usuario.foto" class="form-control" type="text" name="foto" id="foto"
                             placeholder="Digite a url da sua foto">
                     </div>
 
                     <div class="form-group">
-                        <label for="dataNasc">Data de Nascimento</label>
-                        <input class="form-control" type="date" name="dataNasc" id="dataNasc">
+                        <label  for="dataNasc">Data de Nascimento</label>
+                        <input [(ngModel)]="usuario.dataNascimento" class="form-control" type="date" name="dataNasc" id="dataNasc">
                     </div>
                     <div class="form-group">
                         <label for="tipo">Selecione o tipo de usuário</label>
-                        <select name="tipo" id="tipo" class="form-control">
+                        <select name="tipo" id="tipo" class="form-control" (change)="tipoUser($event)">
                             <option>Escolha um tipo de usuário</option>
                             <option value="normal">Padrão</option>
                             <option value="admin">Administrador</option>
@@ -50,10 +50,10 @@
                     </div>
 
                     <div class="d-flex justify-content-around">
-                        <a routerLink='/login'><button type="submit" class="btn btn-outline-danger px-5">
+                        <a routerLink='/login'><button type="submit"  (click)="cadastrar()" class="btn btn-outline-danger px-5">
                             Cancelar
                         </button></a>
-                        <button type="submit" class="btn btn-outline-info px-5">
+                        <button type="submit" class="btn btn-outline-info px-5" (click) ="cadastrar()" >
                             Cadastrar
                         </button>
                     </div>
