--- a/blogpessoal/felipe/src/app/login/login.component.html
+++ b/blogpessoal/felipe/src/app/login/login.component.html
@@ -4,16 +4,16 @@
             <div class="div flex-column align-items-center login-margem">
                 <div class="form-group">
                     <label for="usuario">Usuário</label>
-                    <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário" />
+                    <input [(ngModel)]="usuarioLogin.usuario" class="form-control" type="text" name="usuario" id="usuario" placeholder="Seu usuário" />
                 </div>
 
                 <div class="form-group">
                     <label for="senha">Senha</label>
-                    <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha" />
+                    <input [(ngModel)]="usuarioLogin.senha" class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha" />
                 </div>
 
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-success">Entrar</button>
+                    <button type="submit" class="btn btn-success"(click)="logar()">Entrar</button>
                 </div>
                 <p class="text-center">
                     Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
