--- a/blogpessoal/felipe/src/app/cadastrar/cadastrar.component.css
+++ b/blogpessoal/felipe/src/app/cadastrar/cadastrar.component.css
@@ -1,6 +1,6 @@
   
 #img-bg{
-    background-image: url('https://i.imgur.com/jAZOVhd.jpg');
+    background-image: url('https://i.imgur.com/KHUuXdw.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
