--- a/blogpessoal/felipe/src/app/cadastrar/cadastrar.component.html
+++ b/blogpessoal/felipe/src/app/cadastrar/cadastrar.component.html
@@ -4,30 +4,30 @@
         <div class="col-md-6 alinhamento">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-10 mb-5">
-                    <h1 class="text-center" routerLink= "/cadastrar">Cadastro</h1>
+                    <h1 class="text-center" routerLink="/cadastrar">Cadastro</h1>
 
                     <div class="form-group">
                         <label for="nome">Nome</label>
-                        <input [(ngModel)]= "usuario.nome" class="form-control" type="text" name="nome" id="nome"
-                            placeholder="Digite o seu nome completo" >
+                        <input [(ngModel)]="usuario.nome" class="form-control" type="text" name="nome" id="nome"
+                            placeholder="Digite o seu nome completo">
                     </div>
 
                     <div class="form-group">
                         <label for="usuario">Usuario</label>
-                        <input class="form-control" type="text" name="usuario" id="usuario"
-                            placeholder="Digite o seu nome de usuario">
+                        <input [(ngModel)]="usuario.usuario" class="form-control" type="text" name="usuario"
+                            id="usuario" placeholder="Digite o seu nome de usuario">
                     </div>
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input (input)="confirmSenha($event)" class="form-control" type="text" name="senha" id="senha"
-                            placeholder="Digite o sua senha">
+                        <input class="form-control" type="text" name="senha" id="senha"
+                            placeholder="Digite o sua senha" (input)="confirmSenha($event)">
                     </div>
 
                     <div class="form-group">
                         <label for="confirmSenha">Confirmar senha</label>
-                        <input [(ngModel)]="usuario.senha" class="form-control" type="text" name="confirmSenha" id="confirmSenha"
-                            placeholder="Digite o seu nome completo">
+                        <input [(ngModel)]="usuario.senha" class="form-control" type="text" name="confirmSenha"
+                            id="confirmSenha" placeholder="Digite o seu nome completo">
                     </div>
 
                     <div class="form-group">
@@ -37,8 +37,9 @@
                     </div>
 
                     <div class="form-group">
-                        <label  for="dataNasc">Data de Nascimento</label>
-                        <input [(ngModel)]="usuario.dataNascimento" class="form-control" type="date" name="dataNasc" id="dataNasc">
+                        <label for="dataNasc">Data de Nascimento</label>
+                        <input [(ngModel)]="usuario.dataNascimento" class="form-control" type="date" name="dataNasc"
+                            id="dataNasc">
                     </div>
                     <div class="form-group">
                         <label for="tipo">Selecione o tipo de usuário</label>
@@ -50,10 +51,11 @@
                     </div>
 
                     <div class="d-flex justify-content-around">
-                        <a routerLink='/login'><button type="submit"  (click)="cadastrar()" class="btn btn-outline-danger px-5">
-                            Cancelar
-                        </button></a>
-                        <button type="submit" class="btn btn-outline-info px-5" (click) ="cadastrar()" >
+                        <a routerLink='/login'><button type="submit" (click)="cadastrar()"
+                                class="btn btn-outline-danger px-5">
+                                Cancelar
+                            </button></a>
+                        <button type="submit" class="btn btn-outline-info px-5" (click)="cadastrar()">
                             Cadastrar
                         </button>
                     </div>
