Adicionanado componente inicio sem comsumo

--- a/blogpessoal/felipe/src/app/menu/menu.component.html
+++ b/blogpessoal/felipe/src/app/menu/menu.component.html
@@ -8,11 +8,11 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
         <ul class="navbar-nav mr-auto d-flex align-items-center">
             <li class="nav-item active">
-                <img src="https://i.imgur.com/fBdmXnp_d.webp?maxwidth=760&fidelity=grand" alt="" width="50px"
+                <img src="{{foto}}" alt="" width="50px"
                     class="img-fluid rounded-circle">
             </li>
             <li class="nav-item pl-3 align-items-center">
-                <p class="m-0 font-weight-bold text-white fs-16">Nome do usuario</p>
+                <p class="m-0 font-weight-bold text-white fs-16">{{nome}}</p>
             </li>
 
             <li class="nav-item pl-3 align-items-center">
@@ -23,7 +23,7 @@
 
         <ul class="navbar-nav ml-auto d-flex align-items-center">
             <li class="nav-item pl-3">
-                <a class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i>
+                <a (click)="sair()" class="m-0 font-weight-bold text-white fs-16">Sair <i class="fa fa-sign-out" aria-hidden="true"></i>
                 </a>
             </li>
         </ul>
