Adicionando tema sem consumo

--- a/blogpessoal/felipe/src/app/inicio/inicio.component.html
+++ b/blogpessoal/felipe/src/app/inicio/inicio.component.html
@@ -81,7 +81,7 @@
                     <input type="text" class="form-control" id="texto" row="3" placeholder="Insira o texto">
                 </div>
                 <div class="form-group">
-                    <label for="tema">Escolha um tema ou <a href="">cadatre um novo</a></label>
+                    <label for="tema">Escolha um tema ou <a data-dismiss="modal" routerLink="/tema">cadatre um novo</a></label>
                     <select name="tema" id="tema" class= "form-control">
                         <option value="">Temas</option>
                     </select>
