--- a/blogpessoal/felipe/src/app/tema/tema.component.html
+++ b/blogpessoal/felipe/src/app/tema/tema.component.html
@@ -11,11 +11,11 @@
             <div class="row d-flex justify-content-center mt-4 mb-5 ">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="descricao"
+                        <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao"
                             placeholder="Digite  a descricao do tema ">
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-light">Cadastrar</button>
+                        <button (click)="cadastrarTema()" class="btn btn-light">Cadastrar</button>
                     </div>
                 </div>
 
@@ -26,11 +26,13 @@
 </div>
 
 <div class="container">
+
     <div class="row mt-5">
         <div class="col-md-12">
             <h2 class="text-center">Todos os temas</h2>
         </div>
     </div>
+
 </div>
 
 <div class="row d-flex mt-5 mb-5 justify-content-center">
@@ -38,30 +40,22 @@
         <table class="table table-hover table-dark">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Primeiro</th>
-                    <th scope="col">Último</th>
-                    <th scope="col">Nickname</th>
+                    <th scope="col">Id</th>
+                    <th scope="col">Descricao</th>
+                    <th scope="col" class = "text-right">Modificaçãoes</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                <tr *ngFor='let tema of listaTema'>
+                    <th scope="row">{{tema.id}}</th>
+                    <td>{{tema.descricao}}</td>
+                    <td class="d-flex justify-content-center">
+                        <button class="btn btn-info mr-3">Editar</button>
+                        <button class="btn btn-danger">Apagar</button>
+                    </td>
                 </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                </tr>
+
+
             </tbody>
         </table>
     </div>
